* Update package.json * Update front end layouts with header and footer * Update README.md * Complete translation logic * Complete routing logic * Write 24 unit tests * Write 6 functional tests

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "american-british-english-translator",
+  "name": "fcc-american-british-translator",
   "version": "2.0.0",
-  "description": "Quality Assurance 5: American / British English Translator",
+  "description": "American / British English Translator. Quality Assurance Certification. Free Code Camp.",
   "main": "server.js",
   "scripts": {
     "start": "nodemon server.js",
@@ -18,8 +18,22 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsdom": "^16.4.0",
-    "mocha": "^8.1.3",
+    "mocha": "^10.3.0",
     "nodemon": "^2.0.4"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/minhkashyu/fcc-american-british-translator"
+  },
+  "bugs": {
+    "url": "https://github.com/minhkashyu/fcc-american-british-translator/issues"
+  },
+  "homepage": "https://github.com/minhkashyu/fcc-american-british-translator#readme",
+  "author": "Minh Ta <https://github.com/minhkashyu>",
+  "keywords": [
+    "node",
+    "hyperdev",
+    "express"
+  ],
   "license": "MIT"
 }
